[tool.poetry]
name = "zhipuai-learning"
version = "0.1.0"
description = ""
authors = ["CathyLi <cth@bithuman.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
zhipuai = "^2.0.1"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
